Fixed flash message z-index in  mobile ( for content-nav only)

--- a/css/contentNavigation/content-navigation.less
+++ b/css/contentNavigation/content-navigation.less
@@ -373,4 +373,10 @@ html.cn {
 			margin-left : 38%;
 		}
 	}
+
+	#flash-message {
+		@media (max-width : @screen-xs-max) {
+			z-index : 2000000003 !important;
+		}
+	}
 }
